fix: added correct z-index for dropdown and header

--- a/src/components/AllProductsSection/Dropdown2.module.scss
+++ b/src/components/AllProductsSection/Dropdown2.module.scss
@@ -11,7 +11,7 @@
   border: 2px solid #eaecf0;
   border-radius: 50px;
   position: relative;
-  z-index: 9999;
+  z-index: 999;
   > p {
     line-height: 24px;
     width: 100%;
