--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     border-bottom: 1px solid rgb(230, 230, 230);
     position: fixed;
-    z-index: 999;
+    z-index: 9999;
     background-color: #fff;
     top: 0;
 
